added background and some minor changes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-    <title>Serge's memory pair project</title>
+    <title>Serge's memory pair game</title>
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <h1>Serge's memory pair project</h1>
+        <h1>Memory pair game</h1>
         <div class="field">
 
         </div>
