--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="wrapper">
         <h1>Memory pair game</h1>
-        <div class="field">
+       
+        <div class="field"></div>
 
+        <div class="time">
+            <div class="watch" id="watch">
+				00:00:00:00
+			</div>
         </div>
-
-        <div class="time">Time:
-            <span id="hour">00</span>:<span id="mins">00</span>:<span id="secs">00</span>
-        </time>
     </div>
     <script src="app.js"></script>
 </body>
