--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
        
         <div class="field"></div>
 
-        <div class="time">
+        <div class="time" id="time">
             <div class="watch" id="watch">
 				00:00:00:00
 			</div>
         </div>
+        
     </div>
+
     <script src="app.js"></script>
 </body>
 </html>
